--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ dependencies = [
     "structlog>=24.1.0",
     "orjson>=3.9.0",
     "python-dotenv>=1.0.0",
+    "psutil>=5.9.0",
+    "numpy>=1.24.0",
+    "scipy>=1.10.0",
 ]
 
 [project.optional-dependencies]
@@ -37,6 +40,8 @@ dev = [
     "pytest-cov>=4.1.0",
     "ruff>=0.3.0",
     "mypy>=1.8.0",
+    "pre-commit>=3.5.0",
+    "bandit>=1.7.0",
 ]
 llm = [
     "openai>=1.12.0",
@@ -56,6 +61,8 @@ dev-dependencies = [
     "pytest-cov>=4.1.0",
     "ruff>=0.3.0",
     "mypy>=1.8.0",
+    "pre-commit>=3.5.0",
+    "bandit>=1.7.0",
 ]
 
 # ============================================================================
