--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,10 @@ dependencies = [
     "psutil>=5.9.0",
     "numpy>=1.24.0",
     "scipy>=1.10.0",
+    "scikit-learn>=1.3.0",
+    "fastapi>=0.110.0",
+    "uvicorn>=0.27.0",
+    "websockets>=12.0",
 ]
 
 [project.optional-dependencies]
