--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,151 +1,199 @@
-name: CI
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, feature/** ]
   pull_request:
     branches: [ main, develop ]
+  schedule:
+    # Run tests daily at 2 AM UTC
+    - cron: '0 2 * * *'
+  workflow_dispatch:
+    # Allow manual trigger
 
 env:
-  UV_VERSION: "0.1.9"
-  PYTHON_VERSION: "3.11"
+  PYTHON_VERSION: '3.11'
+  MIN_COVERAGE: 85
 
 jobs:
-  # ============================================================================
-  # Linting Job
-  # ============================================================================
-  lint:
-    name: Lint Code (Ruff)
+  # ====================
+  # Code Quality Checks
+  # ====================
+  lint-and-format:
+    name: 🔍 Lint & Format Check
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v1
-        with:
-          version: ${{ env.UV_VERSION }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
-          uv sync --dev
+          python -m pip install --upgrade pip
+          pip install ruff mypy bandit
 
       - name: Run Ruff linter
-        run: |
-          uv run ruff check src/ tests/ --output-format=github
+        run: ruff check src/ tests/
 
       - name: Run Ruff formatter check
-        run: |
-          uv run ruff format src/ tests/ --check
-
-  # ============================================================================
-  # Type Checking Job
-  # ============================================================================
-  typecheck:
-    name: Type Check (MyPy)
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v1
-        with:
-          version: ${{ env.UV_VERSION }}
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Install dependencies
-        run: |
-          uv sync --dev
+        run: ruff format --check src/ tests/
 
       - name: Run MyPy type checker
-        run: |
-          uv run mypy src/ --show-error-codes --pretty
-        continue-on-error: true  # Don't fail CI on type errors initially
+        run: mypy src/ --ignore-missing-imports
+        continue-on-error: true  # Type checking is informational
 
-  # ============================================================================
-  # Testing Job (Multiple Python Versions)
-  # ============================================================================
-  test:
-    name: Test (Python ${{ matrix.python-version }})
-    runs-on: ubuntu-latest
+      - name: Run Bandit security linter
+        run: bandit -r src/ -f json -o bandit-report.json
+        continue-on-error: true
 
+      - name: Upload security report
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: bandit-security-report
+          path: bandit-report.json
+
+  # ====================
+  # Unit Tests - Fast
+  # ====================
+  unit-tests:
+    name: 🧪 Unit Tests (Python ${{ matrix.python-version }})
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.11", "3.12"]
-
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ['3.11', '3.12']
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v1
-        with:
-          version: ${{ env.UV_VERSION }}
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
+
       - name: Install dependencies
         run: |
-          uv sync --dev
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
 
-      - name: Run pytest
+      - name: Run unit tests
         run: |
-          uv run pytest tests/ \
-            --cov=src \
-            --cov-report=xml \
-            --cov-report=term \
-            --junit-xml=pytest-results.xml \
-            -v
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          file: ./coverage.xml
-          flags: unittests
-          name: codecov-${{ matrix.python-version }}
-          fail_ci_if_error: false
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          pytest tests/ \
+            -v \
+            --tb=short \
+            --junit-xml=junit-${{ matrix.os }}-${{ matrix.python-version }}.xml \
+            --maxfail=5 \
+            -m "not integration and not slow"
+        continue-on-error: false
 
       - name: Upload test results
-        uses: actions/upload-artifact@v4
         if: always()
+        uses: actions/upload-artifact@v3
         with:
-          name: pytest-results-${{ matrix.python-version }}
-          path: pytest-results.xml
+          name: test-results-${{ matrix.os }}-${{ matrix.python-version }}
+          path: junit-*.xml
 
-  # ============================================================================
-  # Coverage Check Job
-  # ============================================================================
+  # ====================
+  # Coverage Analysis
+  # ====================
   coverage:
-    name: Coverage Check (80%+ required)
+    name: 📊 Coverage Analysis
     runs-on: ubuntu-latest
-    needs: test
-
+    needs: [lint-and-format]
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install uv
-        uses: astral-sh/setup-uv@v1
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          version: ${{ env.UV_VERSION }}
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
+          pip install coverage-badge
+
+      - name: Run tests with coverage
+        run: |
+          pytest tests/ \
+            --cov=src \
+            --cov-report=xml \
+            --cov-report=html \
+            --cov-report=term-missing \
+            --cov-branch \
+            --cov-fail-under=${{ env.MIN_COVERAGE }}
+
+      - name: Generate coverage badge
+        run: |
+          coverage-badge -o coverage.svg -f
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: true
+
+      - name: Upload coverage HTML report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: htmlcov/
+
+      - name: Upload coverage badge
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-badge
+          path: coverage.svg
+
+      - name: Comment coverage on PR
+        if: github.event_name == 'pull_request'
+        uses: py-cov-action/python-coverage-comment-action@v3
+        with:
+          GITHUB_TOKEN: ${{ github.token }}
+
+  # ====================
+  # Integration Tests
+  # ====================
+  integration-tests:
+    name: 🔗 Integration Tests
+    runs-on: ubuntu-latest
+    needs: [unit-tests]
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -154,30 +202,109 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv sync --dev
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
 
-      - name: Run tests with coverage
+      - name: Run integration tests
         run: |
-          uv run pytest tests/ --cov=src --cov-report=term --cov-report=html
+          pytest tests/ \
+            -v \
+            -m integration \
+            --junit-xml=junit-integration.xml
+        timeout-minutes: 15
 
-      - name: Check coverage threshold
-        run: |
-          uv run coverage report --fail-under=80
-        continue-on-error: true  # Don't fail initially, just warn
-
-      - name: Upload coverage HTML
-        uses: actions/upload-artifact@v4
+      - name: Upload integration test results
+        if: always()
+        uses: actions/upload-artifact@v3
         with:
-          name: coverage-html
-          path: htmlcov/
+          name: integration-test-results
+          path: junit-integration.xml
 
-  # ============================================================================
-  # Docker Build Job
-  # ============================================================================
-  docker-build:
-    name: Docker Build Test
+  # ====================
+  # Performance Tests
+  # ====================
+  performance-tests:
+    name: ⚡ Performance Tests
     runs-on: ubuntu-latest
+    needs: [unit-tests]
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
+          pip install pytest-benchmark
+
+      - name: Run performance tests
+        run: |
+          pytest tests/ \
+            -v \
+            -m "slow or benchmark" \
+            --benchmark-only \
+            --benchmark-json=benchmark.json
+        continue-on-error: true
+
+      - name: Upload benchmark results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: benchmark-results
+          path: benchmark.json
+
+  # ====================
+  # Security Scanning
+  # ====================
+  security-scan:
+    name: 🔒 Security Scan
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install safety pip-audit
+
+      - name: Run Safety check
+        run: safety check --json --output safety-report.json
+        continue-on-error: true
+
+      - name: Run pip-audit
+        run: pip-audit --format json --output pip-audit-report.json
+        continue-on-error: true
+
+      - name: Upload security reports
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: security-reports
+          path: |
+            safety-report.json
+            pip-audit-report.json
+
+  # ====================
+  # Docker Build & Test
+  # ====================
+  docker-test:
+    name: 🐳 Docker Build & Test
+    runs-on: ubuntu-latest
+    needs: [lint-and-format]
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -190,30 +317,29 @@ jobs:
         with:
           context: .
           push: false
-          tags: mcp-game-league:${{ github.sha }}
+          load: true
+          tags: mcp-game-league:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Test Docker image
         run: |
-          docker run --rm mcp-game-league:${{ github.sha }} --help
-        continue-on-error: true
+          docker run --rm mcp-game-league:test python -c "import src; print('Import successful')"
 
-  # ============================================================================
-  # Security Scan Job
-  # ============================================================================
-  security:
-    name: Security Scan
+      - name: Run tests in Docker
+        run: |
+          docker run --rm mcp-game-league:test pytest tests/ -v --tb=short
+
+  # ====================
+  # Documentation Build
+  # ====================
+  docs-build:
+    name: 📚 Documentation Build
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v1
-        with:
-          version: ${{ env.UV_VERSION }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -222,51 +348,111 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv sync --dev
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
+          pip install sphinx sphinx-rtd-theme
 
-      - name: Run security scan (Bandit)
+      - name: Validate documentation links
         run: |
-          uv pip install bandit
-          uv run bandit -r src/ -f json -o bandit-results.json
+          find docs/ -name "*.md" -type f -exec grep -H "http" {} \; || true
+
+      - name: Check for broken internal links
+        run: |
+          # Simple check for markdown links
+          find docs/ -name "*.md" -type f | while read file; do
+            echo "Checking $file"
+            grep -oP '\[.*?\]\(\K[^)]+' "$file" | while read link; do
+              if [[ $link == /* ]] || [[ $link == ./* ]]; then
+                if [ ! -f "$(dirname $file)/$link" ]; then
+                  echo "Broken link in $file: $link"
+                fi
+              fi
+            done
+          done
+
+  # ====================
+  # Mutation Testing
+  # ====================
+  mutation-testing:
+    name: 🧬 Mutation Testing
+    runs-on: ubuntu-latest
+    needs: [coverage]
+    if: github.event_name == 'pull_request'
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e ".[dev]"
+          pip install mutmut
+
+      - name: Run mutation testing (sample)
+        run: |
+          # Run on a subset for speed
+          mutmut run --paths-to-mutate=src/game/ --tests-dir=tests/
+        continue-on-error: true
+        timeout-minutes: 30
+
+      - name: Generate mutation report
+        if: always()
+        run: |
+          mutmut html
         continue-on-error: true
 
-      - name: Upload security scan results
-        uses: actions/upload-artifact@v4
+      - name: Upload mutation report
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: mutation-report
+          path: html/
+
+  # ====================
+  # Test Report Summary
+  # ====================
+  test-report:
+    name: 📋 Test Report Summary
+    runs-on: ubuntu-latest
+    needs: [unit-tests, integration-tests, coverage]
+    if: always()
+    
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
+
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v4
         if: always()
         with:
-          name: security-scan-results
-          path: bandit-results.json
+          report_paths: '**/junit-*.xml'
+          detailed_summary: true
+          include_passed: true
 
-  # ============================================================================
-  # All Checks Complete
-  # ============================================================================
-  all-checks:
-    name: All CI Checks Passed
+  # ====================
+  # Deployment Gate
+  # ====================
+  deployment-gate:
+    name: ✅ Deployment Gate
     runs-on: ubuntu-latest
-    needs: [lint, typecheck, test, coverage, docker-build, security]
-    if: always()
-
+    needs: [unit-tests, integration-tests, coverage, security-scan]
+    if: github.ref == 'refs/heads/main'
+    
     steps:
-      - name: Check if all jobs succeeded
+      - name: All checks passed
         run: |
-          if [ "${{ needs.lint.result }}" != "success" ]; then
-            echo "Linting failed"
-            exit 1
-          fi
+          echo "✅ All CI checks passed!"
+          echo "✅ Tests: Passed"
+          echo "✅ Coverage: Above ${{ env.MIN_COVERAGE }}%"
+          echo "✅ Security: Scanned"
+          echo "✅ Ready for deployment"
 
-          if [ "${{ needs.test.result }}" != "success" ]; then
-            echo "Tests failed"
-            exit 1
-          fi
-
-          echo "All CI checks passed successfully!"
-
-      - name: Report success
+      - name: Notify success
         run: |
-          echo "✅ All quality gates passed!"
-          echo "✅ Linting: PASS"
-          echo "✅ Type checking: PASS"
-          echo "✅ Tests: PASS"
-          echo "✅ Coverage: CHECKED"
-          echo "✅ Docker build: PASS"
-          echo "✅ Security scan: CHECKED"
+          echo "::notice::CI/CD pipeline completed successfully! Ready for deployment."
