--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,7 @@ jobs:
           pip install -e ".[dev]"
 
       - name: Run unit tests
+        shell: bash
         run: |
           pytest tests/ \
             -v \
@@ -144,6 +145,7 @@ jobs:
           pip install coverage-badge
 
       - name: Run tests with coverage
+        shell: bash
         run: |
           pytest tests/ \
             --cov=src \
@@ -206,6 +208,7 @@ jobs:
           pip install -e ".[dev]"
 
       - name: Run integration tests
+        shell: bash
         run: |
           pytest tests/ \
             -v \
@@ -244,6 +247,7 @@ jobs:
           pip install pytest-benchmark
 
       - name: Run performance tests
+        shell: bash
         run: |
           pytest tests/ \
             -v \
