handle errors from tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,8 @@ jobs:
         continue-on-error: true  # Type checking is informational
 
       - name: Run Bandit security linter
-        run: bandit -r src/ -f json -o bandit-report.json || echo '{"results": []}' > bandit-report.json
+        run: |
+          bandit -r src/ -f json -o bandit-report.json || echo '{"results": []}' > bandit-report.json
         continue-on-error: true
 
       - name: Upload security report
