ruff formating formatting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,19 +6,14 @@ on:
   pull_request:
     branches: [ main, develop ]
   schedule:
-    # Run tests daily at 2 AM UTC
-    - cron: '0 2 * * *'
+    - cron: '0 2 * * *'  # Daily at 2 AM UTC
   workflow_dispatch:
-    # Allow manual trigger
 
 env:
-  PYTHON_VERSION: '3.11'
-  MIN_COVERAGE: 80
+  PYTHON_VERSION: "3.11"
+  MIN_COVERAGE: "80"
 
 jobs:
-  # ====================
-  # Code Quality Checks
-  # ====================
   lint-and-format:
     name: 🔍 Lint & Format Check
     runs-on: ubuntu-latest
@@ -30,55 +25,38 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff mypy bandit
+          pip install ruff mypy bandit[toml]
+          pip install -e ".[dev]"
 
-      - name: Run Ruff linter
-        run: ruff check src/ tests/
-
-      - name: Run Ruff formatter check
-        run: ruff format --check src/ tests/
-
-      - name: Run MyPy type checker
-        run: mypy src/ --ignore-missing-imports
-        continue-on-error: true  # Type checking is informational
-
-      - name: Run Bandit security linter
+      - name: Run Ruff linting
         run: |
-          bandit -r src/ -f json -o bandit-report.json || echo '{"results": []}' > bandit-report.json
-        continue-on-error: true
+          ruff check src/ tests/ --output-format=github
 
-      - name: Upload security report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: bandit-security-report
-          path: bandit-report.json
-          if-no-files-found: warn
+      - name: Run Ruff formatting check
+        run: |
+          ruff format src/ tests/ --check
 
-  # ====================
-  # Unit Tests - Fast
-  # ====================
+      - name: Run MyPy type checking
+        run: |
+          mypy src/ --ignore-missing-imports
+
+      - name: Run Bandit security scan
+        run: |
+          bandit -r src/ -ll
+
   unit-tests:
-    name: 🧪 Unit Tests (Python ${{ matrix.python-version }})
+    name: 🧪 Unit Tests (Python ${{ matrix.python-version }}, ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ['3.11', '3.12']
-    
+        python-version: ["3.11", "3.12"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -87,12 +65,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
@@ -100,31 +73,20 @@ jobs:
           pip install -e ".[dev]"
 
       - name: Run unit tests
-        shell: bash
         run: |
-          pytest tests/ \
-            -v \
-            --tb=short \
-            --junit-xml=junit-${{ matrix.os }}-${{ matrix.python-version }}.xml \
-            --maxfail=5 \
-            -m "not integration and not slow"
-        continue-on-error: false
+          pytest tests/ -v -m "not slow and not integration" --junit-xml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml
 
       - name: Upload test results
-        if: always()
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: test-results-${{ matrix.os }}-${{ matrix.python-version }}
-          path: junit-*.xml
+          path: junit/test-results-*.xml
 
-  # ====================
-  # Coverage Analysis
-  # ====================
   coverage:
     name: 📊 Coverage Analysis
     runs-on: ubuntu-latest
-    needs: [lint-and-format]
-
+    needs: lint-and-format
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -133,33 +95,24 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
-          pip install coverage-badge
 
       - name: Run tests with coverage
-        shell: bash
         run: |
-          pytest tests/ \
-            --cov=src \
-            --cov-report=xml \
-            --cov-report=html \
-            --cov-report=term-missing \
-            --cov-branch \
-            --cov-fail-under=${{ env.MIN_COVERAGE }}
+          pytest tests/ --cov=src --cov-report=xml --cov-report=html --cov-report=term-missing --cov-fail-under=${{ env.MIN_COVERAGE }}
 
-      - name: Generate coverage badge
-        run: |
-          coverage-badge -o coverage.svg -f
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-reports
+          path: |
+            coverage.xml
+            htmlcov/
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
@@ -168,33 +121,18 @@ jobs:
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
 
-      - name: Upload coverage HTML report
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: htmlcov/
+      - name: Check coverage threshold
+        run: |
+          coverage report --fail-under=${{ env.MIN_COVERAGE }}
 
-      - name: Upload coverage badge
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-badge
-          path: coverage.svg
-
-      - name: Comment coverage on PR
-        if: github.event_name == 'pull_request'
-        uses: py-cov-action/python-coverage-comment-action@v3
-        with:
-          GITHUB_TOKEN: ${{ github.token }}
-
-  # ====================
-  # Integration Tests
-  # ====================
   integration-tests:
     name: 🔗 Integration Tests
     runs-on: ubuntu-latest
-    needs: [unit-tests]
-    
+    needs: unit-tests
+    timeout-minutes: 15
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -203,6 +141,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
@@ -210,29 +149,21 @@ jobs:
           pip install -e ".[dev]"
 
       - name: Run integration tests
-        shell: bash
         run: |
-          pytest tests/ \
-            -v \
-            -m integration \
-            --junit-xml=junit-integration.xml
-        timeout-minutes: 15
+          pytest tests/ -v -m integration --junit-xml=junit/integration-results.xml
 
       - name: Upload integration test results
-        if: always()
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: integration-test-results
-          path: junit-integration.xml
+          path: junit/integration-results.xml
 
-  # ====================
-  # Performance Tests
-  # ====================
   performance-tests:
     name: ⚡ Performance Tests
     runs-on: ubuntu-latest
-    needs: [unit-tests]
-
+    needs: unit-tests
+    timeout-minutes: 20
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -241,37 +172,27 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
-          pip install pytest-benchmark
 
       - name: Run performance tests
-        shell: bash
         run: |
-          pytest tests/ \
-            -v \
-            -m "slow or benchmark" \
-            --benchmark-only \
-            --benchmark-json=benchmark.json
-        continue-on-error: true
+          pytest tests/ -v -m "slow or benchmark" --junit-xml=junit/performance-results.xml
 
-      - name: Upload benchmark results
-        if: always()
+      - name: Upload performance test results
         uses: actions/upload-artifact@v4
+        if: always()
         with:
-          name: benchmark-results
-          path: benchmark.json
+          name: performance-test-results
+          path: junit/performance-results.xml
 
-  # ====================
-  # Security Scanning
-  # ====================
   security-scan:
     name: 🔒 Security Scan
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -280,37 +201,37 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install safety pip-audit
+          pip install safety pip-audit bandit[toml]
+          pip install -e ".[dev]"
 
       - name: Run Safety check
-        run: safety check --json --output safety-report.json
-        continue-on-error: true
+        run: |
+          safety check --json || true
 
       - name: Run pip-audit
-        run: pip-audit --format json --output pip-audit-report.json
-        continue-on-error: true
+        run: |
+          pip-audit --desc || true
+
+      - name: Run Bandit
+        run: |
+          bandit -r src/ -f json -o bandit-report.json || true
 
       - name: Upload security reports
-        if: always()
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: security-reports
           path: |
-            safety-report.json
-            pip-audit-report.json
+            bandit-report.json
 
-  # ====================
-  # Docker Build & Test
-  # ====================
   docker-test:
     name: 🐳 Docker Build & Test
     runs-on: ubuntu-latest
-    needs: [lint-and-format]
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -318,147 +239,33 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: false
-          load: true
-          tags: mcp-game-league:test
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Test Docker image
+      - name: Build Docker test image
         run: |
-          docker run --rm mcp-game-league:test python -c "import src; print('Import successful')"
+          docker-compose -f docker-compose.test.yml build
 
       - name: Run tests in Docker
         run: |
-          docker run --rm mcp-game-league:test pytest tests/ -v --tb=short
+          docker-compose -f docker-compose.test.yml run --rm quick-tests
 
-  # ====================
-  # Documentation Build
-  # ====================
-  docs-build:
-    name: 📚 Documentation Build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e ".[dev]"
-          pip install sphinx sphinx-rtd-theme
-
-      - name: Validate documentation links
-        run: |
-          find docs/ -name "*.md" -type f -exec grep -H "http" {} \; || true
-
-      - name: Check for broken internal links
-        run: |
-          # Simple check for markdown links
-          find docs/ -name "*.md" -type f | while read file; do
-            echo "Checking $file"
-            grep -oP '\[.*?\]\(\K[^)]+' "$file" | while read link; do
-              if [[ $link == /* ]] || [[ $link == ./* ]]; then
-                if [ ! -f "$(dirname $file)/$link" ]; then
-                  echo "Broken link in $file: $link"
-                fi
-              fi
-            done
-          done
-
-  # ====================
-  # Mutation Testing
-  # ====================
-  mutation-testing:
-    name: 🧬 Mutation Testing
-    runs-on: ubuntu-latest
-    needs: [coverage]
-    if: github.event_name == 'pull_request'
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e ".[dev]"
-          pip install mutmut
-
-      - name: Run mutation testing (sample)
-        run: |
-          # Run on a subset for speed
-          mutmut run --paths-to-mutate=src/game/ --tests-dir=tests/
-        continue-on-error: true
-        timeout-minutes: 30
-
-      - name: Generate mutation report
+      - name: Cleanup
         if: always()
         run: |
-          mutmut html
-        continue-on-error: true
+          docker-compose -f docker-compose.test.yml down -v
 
-      - name: Upload mutation report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: mutation-report
-          path: html/
-
-  # ====================
-  # Test Report Summary
-  # ====================
-  test-report:
-    name: 📋 Test Report Summary
+  status-check:
+    name: ✅ All Checks Passed
     runs-on: ubuntu-latest
-    needs: [unit-tests, integration-tests, coverage]
+    needs: [lint-and-format, unit-tests, coverage, integration-tests, performance-tests, security-scan, docker-test]
     if: always()
-
     steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
-
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v4
-        if: always()
-        with:
-          report_paths: '**/junit-*.xml'
-          detailed_summary: true
-          include_passed: true
-
-  # ====================
-  # Deployment Gate
-  # ====================
-  deployment-gate:
-    name: ✅ Deployment Gate
-    runs-on: ubuntu-latest
-    needs: [unit-tests, integration-tests, coverage, security-scan]
-    if: github.ref == 'refs/heads/main'
-    
-    steps:
-      - name: All checks passed
+      - name: Check all jobs status
         run: |
-          echo "✅ All CI checks passed!"
-          echo "✅ Tests: Passed"
-          echo "✅ Coverage: Above ${{ env.MIN_COVERAGE }}%"
-          echo "✅ Security: Scanned"
-          echo "✅ Ready for deployment"
-
-      - name: Notify success
-        run: |
-          echo "::notice::CI/CD pipeline completed successfully! Ready for deployment."
+          if [ "${{ needs.lint-and-format.result }}" != "success" ] || \
+             [ "${{ needs.unit-tests.result }}" != "success" ] || \
+             [ "${{ needs.coverage.result }}" != "success" ] || \
+             [ "${{ needs.integration-tests.result }}" != "success" ] || \
+             [ "${{ needs.performance-tests.result }}" != "success" ]; then
+            echo "One or more required checks failed"
+            exit 1
+          fi
+          echo "All checks passed successfully! ✅"
