--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,9 +3,9 @@
 #
 # Run tests in Docker containers
 # Usage:
-#   docker-compose -f docker-compose.test.yml up
-#   docker-compose -f docker-compose.test.yml run unit-tests
-#   docker-compose -f docker-compose.test.yml run integration-tests
+#   docker compose -f docker-compose.test.yml up
+#   docker compose -f docker-compose.test.yml run unit-tests
+#   docker compose -f docker-compose.test.yml run integration-tests
 
 version: '3.8'
 
