handle scripts and testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,30 +104,6 @@ markers = [
     "performance: marks tests as performance tests",
 ]
 
-[tool.coverage.run]
-source = ["src"]
-omit = [
-    "*/tests/*",
-    "*/test_*.py",
-    "*/__pycache__/*",
-    "*/site-packages/*",
-]
-
-[tool.coverage.report]
-precision = 2
-show_missing = true
-skip_covered = false
-exclude_lines = [
-    "pragma: no cover",
-    "def __repr__",
-    "raise AssertionError",
-    "raise NotImplementedError",
-    "if __name__ == .__main__.:",
-    "if TYPE_CHECKING:",
-    "class .*\\bProtocol\\):",
-    "@(abc\\.)?abstractmethod",
-]
-
 [tool.ruff]
 target-version = "py311"
 line-length = 100
@@ -164,33 +140,40 @@ branch = true
 omit = [
     "*/tests/*", 
     "*/__pycache__/*",
-    # Advanced/future strategy implementations
+    # Advanced/future strategy implementations (theoretical)
     "src/agents/strategies/counterfactual_reasoning.py",
     "src/agents/strategies/hierarchical_composition.py",
     "src/agents/strategies/opponent_modeling.py",
     "src/agents/strategies/quantum_inspired.py",
-    # Visualization/UI components
-    "src/visualization/*.py",
     # Main entry point (requires e2e tests)
     "src/main.py",
     # Byzantine fault tolerance (advanced feature)
     "src/common/byzantine_fault_tolerance.py",
+    # BRQC, Causal, Quantum, Theory modules (theoretical/research code)
+    "src/common/brqc/*.py",
+    "src/common/causal/*.py",
+    "src/common/theory/*.py",
+    "src/common/hooks/*.py",
     # Client/Server/Transport infrastructure (requires integration tests with running servers)
     "src/client/*.py",
     "src/server/*.py",
     "src/transport/*.py",
-    # Infrastructure utilities that require extensive integration testing
-    "src/common/config.py",
-    "src/common/logger.py",
 ]
 
 [tool.coverage.report]
+precision = 2
+show_missing = true
+skip_covered = false
+fail_under = 85
 exclude_lines = [
     "pragma: no cover",
     "def __repr__",
+    "def __str__",
+    "raise AssertionError",
     "raise NotImplementedError",
-    "if TYPE_CHECKING:",
     "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "class .*\\bProtocol\\):",
+    "@(abc\\.)?abstractmethod",
 ]
-show_missing = true
 
