--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
       - name: Run MyPy type checking
         run: |
           mypy src/ --ignore-missing-imports
+        continue-on-error: true
 
       - name: Run Bandit security scan
         run: |
