--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   PYTHON_VERSION: "3.11"
-  MIN_COVERAGE: "80"
+  MIN_COVERAGE: "80"  # Realistic target based on actual codebase
 
 jobs:
   lint-and-format:
