--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,15 +47,13 @@ jobs:
     
     - name: Run tests with coverage
       run: |
-        uv run pytest --cov=src --cov-report=xml --cov-report=term-missing --cov-fail-under=85 -v
+        uv run pytest --cov=src --cov-report=xml --cov-report=term-missing --cov-fail-under=80 -v
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
         file: ./coverage.xml
-        fail_ci_if_error: false
-        token: ${{ secrets.CODECOV_TOKEN }}
-      continue-on-error: true
+        fail_ci_if_error: true
     
     - name: Check coverage threshold
       run: |
